# 01-rcli-homework

./: Cargo.toml  README.md  deny.toml  test.http
src/: lib.rs  main.rs
src/cli/: http.rs  jwt.rs  mod.rs  text.rs
src/process/: mod.rs  process_http.rs  process_jwt.rs  process_text.rs
