[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.4", features = ["derive"] }
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
